# vulkan_practice

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  README.adoc  base_render.cpp  base_shader.slang  vcpkg.json.bak
src/: application.cpp  application.h  base_render.cpp  base_shader.slang  main.cpp  original.slang  renderer.h  renderer_core.cpp  renderer_draw.cpp  renderer_resources.cpp
vma_raii/: CMakeLists.txt  vma_raii.cpp  vma_raii.h
